# vector-db-benchmarking-suite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
docs/: index.html
src/: benchmark.py
tests/: conftest.py  test_benchmarker.py  test_dataset_loader.py  test_faiss_adapter.py  test_results_aggregator.py  test_synthetic_generator.py
vectordb_bench/: __init__.py  __main__.py  benchmark.py  cli.py
vectordb_bench/analysis/: __init__.py  results_aggregator.py  visualizer.py
vectordb_bench/benchmarks/: __init__.py  latency_benchmark.py  recall_benchmark.py  throughput_benchmark.py
vectordb_bench/connectors/: __init__.py  bigquery_connector.py  faiss_connector.py  pgvector_connector.py  pinecone_connector.py  qdrant_connector.py  weaviate_connector.py
vectordb_bench/datasets/: __init__.py  dataset_loader.py  synthetic_generator.py
