[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectordb-bench"
version = "0.1.0"
description = "Benchmarking suite for comparing vector databases on recall, latency, throughput, and cost"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Vector DB Benchmarking Suite contributors" }]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.9"]
pinecone = ["pinecone>=7.0"]
weaviate = ["weaviate-client>=4.15"]
qdrant = ["qdrant-client>=1.13"]
pgvector = ["psycopg[binary]>=3.2"]
bigquery = ["google-cloud-bigquery>=3.30"]
viz = ["matplotlib>=3.9"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
all = [
    "faiss-cpu>=1.9",
    "pinecone>=7.0",
    "weaviate-client>=4.15",
    "qdrant-client>=1.13",
    "psycopg[binary]>=3.2",
    "google-cloud-bigquery>=3.30",
    "matplotlib>=3.9",
]

[project.scripts]
vectordb-bench = "vectordb_bench.cli:main"

[tool.setuptools.packages.find]
include = ["vectordb_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
